Fix paragraph spacing in explainer

--- a/site/assets/sass/components/_explainer.scss
+++ b/site/assets/sass/components/_explainer.scss
@@ -10,7 +10,7 @@
     margin-top: 0.5em;
   }
 
-  > p {
+  p:first-child {
     margin-top: 0;
   }
 
